# jpengine

./: .pre-commit-config.yaml  README.md
.github/workflows/: build-linux-2d.yml  build-linux-3d.yml  build-linux.yml  build-wasm-2d.yml  build-wasm.yml  codeql.yml
drawing-sdl/: CMakeLists.txt  Makefile  README.md
jpengine/: .gitignore  CMakeLists.txt  README.md
jpengine-2d/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
jpengine-2d/.claude/: CLAUDE.md
jpengine-2d/.claude/memory/: MEMORY.md  project_jpengine2d.md  user_jose.md
jpengine-2d/assets/scripts/: main.lua
jpengine-2d/assets/scripts/defs/: asset-defs.lua
jpengine-2d/docs/guides/: sdl-opengl-rendering.md
jpengine-2d/games/platformer/assets/scripts/: entities.lua  main.lua
jpengine-2d/games/platformer/assets/scripts/defs/: asset-defs.lua
jpengine-2d/games/platformer/web/: shell.html
jpengine-2d/games/tetris/assets/scripts/: block.lua  game.lua  grid.lua  main.lua  tetromino.lua  utils.lua
jpengine-2d/games/tetris/assets/scripts/defs/: asset-defs.lua
jpengine-2d/games/tetris/web/: shell.html
jpengine-2d/include/: game.hpp
jpengine-2d/include/ecs/: component.hpp
jpengine-2d/include/inputs/: button.hpp  gamepad.hpp  gamepad_buttons.hpp  keyboard.hpp  keys.hpp  mouse.hpp
jpengine-2d/include/physics/: box2d-wrappers.hpp  boxtrace-callback.hpp  physics-component.hpp  raycast-callback.hpp  user-data.hpp
jpengine-2d/include/rendering/: batch-renderer.hpp  camera.hpp  default-shaders.hpp  font.hpp  shader.hpp  shape-batch-renderer.hpp  text-batch-renderer.hpp  vertex.hpp
jpengine-2d/include/scripting/: glm_bindings.hpp
jpengine-2d/include/utils/: asset-loader.hpp  asset-manager.hpp  core-data.hpp  meta-utils.hpp  utilities.hpp
jpengine-2d/src/: game.cpp  main.cpp  stb_impl.cpp
jpengine-2d/src/ecs/: component.cpp  entity.cpp  entity.inl  registry.cpp  registry.inl
jpengine-2d/src/inputs/: gamepad.cpp  keyboard.cpp  mouse.cpp
jpengine-2d/src/physics/: box2d-wrappers.cpp  boxtrace-callback.cpp  physics-component.cpp  raycast-callback.cpp
jpengine-2d/src/rendering/: batch-renderer.cpp  camera.cpp  default-shaders.cpp  font.cpp  shader.cpp  shape-batch-renderer.cpp  text-batch-renderer.cpp  texture.cpp  vertex.cpp
jpengine-2d/src/scripting/: script_bindings.cpp
jpengine-2d/src/sounds/: music_player.cpp  sound_player.cpp
jpengine-2d/src/utils/: asset-loader.cpp  asset-manager.cpp  utilities.cpp
jpengine-3d/: .gitignore  CMakeLists.txt  Makefile
jpengine-3d/include/: game.hpp  test-obj.hpp
jpengine-3d/include/engine/: engine.hpp
jpengine-3d/include/engine/src/: application.hpp  engine.hpp
jpengine-3d/include/engine/src/graphics/: shader-program.hpp  texture.hpp
jpengine-3d/include/engine/src/input/: input-manager.hpp
jpengine-3d/include/engine/src/render/: material.hpp  render-queue.hpp
jpengine-3d/include/engine/src/scene/: game-object.hpp  scene.hpp
jpengine-3d/include/engine/src/scene/components/: camera-component.hpp  player-controller-component.hpp
jpengine-3d/include/utils/: asset-path.hpp
jpengine-3d/scripts/: lsan.supp
jpengine-3d/src/: game.cpp  main.cpp  test-obj.cpp
jpengine-3d/src/engine/src/: engine.cpp
jpengine-3d/src/engine/src/graphics/: shader-program.cpp  texture.cpp
jpengine-3d/src/engine/src/input/: input-manager.cpp
jpengine-3d/src/engine/src/render/: material.cpp  mesh.cpp  render-queue.cpp
jpengine-3d/src/engine/src/scene/: game-object.cpp  scene.cpp
jpengine-3d/src/engine/src/scene/components/: camera-component.cpp  light-component.cpp  player-controller-component.cpp
jpengine-3d/src/utils/: stb-impl.cpp
jpengine/assets/scripts/: main.lua
jpengine/assets/textures/: Attribution.txt
jpengine/build-wasm/: Makefile
jpengine/docs/guides/: sdl-opengl-rendering.md
jpengine/include/ecs/: component.hpp  entity.hpp  registry.hpp
jpengine/include/rendering/: camera.hpp  shader.hpp  texture.hpp  vertex.hpp
jpengine/src/: main.cpp  stb_impl.cpp
jpengine/src/ecs/: component.cpp  entity.cpp  entity.inl  registry.cpp  registry.inl
jpengine/src/rendering/: camera.cpp  default-shaders.cpp  shader.cpp  vertex.cpp
jpengine/src/scripting/: glm_bindings.cpp
jpengine/src/utils/: meta-utils.cpp
temp/drawing-sdl/: CMakeLists.txt
temp/drawing-sdl/assets/scripts/: main.lua
temp/drawing-sdl/build-wasm/: Makefile
temp/drawing-sdl/src/: main.cpp
temp/test-emscriten/: CMakeLists.txt  Doxyfile  Makefile  README.md
temp/test-emscriten/build-wasm/: Makefile
temp/test-emscriten/include/: main.hpp
temp/test-emscriten/src/: main.cpp
